This upgrades to memcached 1.5.15 so that we can have a well known uid/gid for the memcache user, this allows us to set the container security context for this user and also dissalow privilege escalation

--- a/chart/flux/templates/memcached.yaml
+++ b/chart/flux/templates/memcached.yaml
@@ -41,6 +41,8 @@ spec:
           containerPort: 11211
         resources:
 {{ toYaml .Values.memcached.resources | indent 10 }}
+        securityContext:
+{{ toYaml .Values.memcached.securityContext | indent 10 }}
     {{- with .Values.memcached.nodeSelector }}
       nodeSelector:
 {{ toYaml . | indent 8 }}
